# ZJU2017-tracking-GoturnKCF

GOTURN_KCF/: CMakeLists.txt
GOTURN_KCF/nets/: tracker.prototxt
GOTURN_KCF/scripts/: runTracker.sh
GOTURN_KCF/src/goturn/helper/: bounding_box.cpp
GOTURN_KCF/src/goturn/loader/: loader_base.cpp
GOTURN_KCF/src/goturn/network/: regressor.cpp
GOTURN_KCF/src/goturn/visualizer/: runTracker.cpp
GOTURN_KCF/src/kcf/: kcftracker.cpp  kcftracker.hpp  runtracker.cpp
netfile/: run.prototxt
resfile/: run.prototxt  tracker.prototxt  train.prototxt
